--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 .App {
   margin: 0;
   padding: 0;
+  background-color: #f5f5f5;
+}
+
+.todo-list-wrapper {
+  min-height: 100vh;
+  background-color: #f7f7f7;
 }
